# Lab3_FP

./: .gitignore  LICENSE  Lab3_FP.cabal  README.md  input.txt  lab3-fp.cabal
src/: Main.hs  TextProc.hs
test/: Spec.hs
