cabal-version: 3.0
name:           lab3-fp
version:        0.1.0.0
synopsis:       Lab3_FP
description:    Lab3_FP
license:        MIT
author:
maintainer:
build-type:     Simple

library
  exposed-modules:     TextProc
  hs-source-dirs:      src
  build-depends:       base >= 4.14 && < 5
  default-language:    Haskell2010

executable Lab3_FP
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base >= 4.14 && < 5, lab3-fp
  other-modules:       TextProc
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  build-depends:       base, hspec, lab3-fp
  default-language:    Haskell2010
